fixed grid gap

--- a/src/Commits.css
+++ b/src/Commits.css
@@ -13,7 +13,7 @@
 	align-content: space-evenly;
 	align-items: center;
 	gap: 50px;
-	column-gap: 300px;
+	column-gap: 100px;
 	grid-template-columns: repeat(2, auto);
 	grid-template-rows: auto;
 	animation: move-right 1s ease-in;
@@ -45,7 +45,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 300px;
+	width: 520px;
 	text-align: left;
 }
 
